# pydeck

./: CLAUDE.md  README.md  pyproject.toml
examples/: default.yaml
examples/plugins/: example_plugin.py
src/pydeck/: actions.py  animations.py  cli.py  config.py  deck.py  images.py  plugins.py  types.py
udev/: 99-streamdeck.rules
